# tinycompress

./: .gitignore  AUTHORS  Android.mk  COPYING  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  compress.c  configure.ac  cplay.c  crec.c  gitcompile  makefile.linux  tinycompress.pc.in  utils.c
include/: Makefile.am
include/sound/: compress_offload.h  compress_params.h
include/tinycompress/: compress_ops.h  tinycompress.h  tinymp3.h  tinywave.h  version.h
src/: Makefile.am
src/lib/: Makefile.am  compress.c  compress_hw.c
src/utils/: Makefile.am  alsa_wrap.c  alsa_wrap.h  caccel.c  cplay.c  crec.c  crecord.c  probes_demux.c  probes_demux.h  sofprobeclient.c  wave.c
src/utils-lgpl/: COPYING  Makefile.am  fcplay.c
src/utils/sofprobeclient/: Makefile.am  probe_dma_frame.h
